Databaser config url changed

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-EE_DATABASE_URL=postgresql://admin:admin@176.57.218.201:5432/test_database
+DATABASE_URL=postgresql://admin:admin@176.57.218.201:5432/test_database
